# Apollo

./: .gitignore  CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  CodeEditor.qml  LanguageSelect.qml  LeaderBoard.qml  Login.qml  Main.qml  MissionExplanation.qml  MissionSolver.qml  ProblemTable.qml  Problems.qml  README.md  main.cpp
backend/: CMakeLists.txt  Dockerfile  main.cpp
frontend/: AImanager.cpp  AImanager.h  Account.qml  CMakeLists.txt  CodeEditor.qml  Highlighter.h  Home.qml  LanguageSelect.qml  LeaderBoard.qml  Login.qml  Main.qml  MatchLoading.qml  Matchmaking.qml  MatchmakingTable.qml  MissionExplanation.qml  MissionExplanation3.qml  MissionSolver.qml  ProblemTable.qml  Problems.qml  Signup.qml  Welcome.qml  authmanager.cpp  authmanager.h  main.cpp  utils.cpp  utils.hpp
